@@ -1,3 +1,7 @@
+---
+permalink: /Installation-and-Development/Installation-instructions
+---
+
 # Installation instructions
 
 In this section we show how to make a standard setup of whois once you compiled the shaded `whois.jar`.
@@ -8,8 +12,8 @@ Ensure `/export` directory has been created.
   - Note on MacOS, Catalina introduced read-only root. Hence creating `export` is not straightforward. See this [post](https://derflounder.wordpress.com/2020/01/18/creating-root-level-directories-and-symbolic-links-on-macos-catalina/), on how to go about doing this. 
 
 Ensure MariaDB and the needed databases are created and populated
-  - See [Getting Started on OSX](01-Getting-started-on-OSX.md#getting-started-on-osx) for installation information.
-  - See [Configure MariaDB](04-Configure-MariaDB.md#configure-mariadb) for instructions how to create and grant user permission.
+  - See [Getting Started on OSX](../Installation-and-Development/Getting-started-on-OSX/#getting-started-on-osx) for installation information.
+  - See [Configure MariaDB](../Installation-and-Development/Configure-MariaDB/#configure-mariadb) for instructions how to create and grant user permission.
 
 ## Requirements
 
@@ -17,10 +21,10 @@ Ensure MariaDB and the needed databases are created and populated
 * the shaded jar produced by release build, located at `whois-db/target/`
 * create a role user to run whois server (by default, `dbase`)
 * whois root directory, owned by role user
-* MariaDB set up (for more instructions, see [Getting Started with development manuals](01-Getting-started-on-OSX.md#getting-started-on-osx))
+* MariaDB set up (for more instructions, see [Getting Started with development manuals](../Installation-and-Development/Getting-started-on-OSX/##getting-started-on-osx))
 * `jmxterm-1.0-alpha-4-uber.jar`, downloadable from http://wiki.cyclopsgroup.org/jmxterm.
    * For MAC OSX the 1.0-alpha-4 version of jmxterm has a problem but there is a fix here: https://github.com/jiaqi/jmxterm. You can checkout the latest version and build the jar using mvn clean package.
-* `logrotate`
+   * For SDK 17 the 1.0-alpha-4 version of jmxterm has a problem. As a workaround you can add `--add-exports jdk.jconsole/sun.tools.jconsole=ALL-UNNAMED` to Java for jmxterm to make use of the jconsole module.
 * `pgrep`
 * `/usr/lib/sendmail`-compatible mailer, like exim
 
@@ -28,13 +32,12 @@ Ensure MariaDB and the needed databases are created and populated
 * create a "fat"/shaded  jar using:
 `mvn clean install -Prelease`
 * Copy `whois-db/target/whois-db-<version>.jar` to whois root directory and rename to `whois.jar`
-* Copy the files `tools/hazelcast.xml`, `tools/log4j2.xml`, `tools/logrotate.conf`, `tools/whois.init` from the repo to the whois root directory
-* Copy `whois-commons/src/main/resources/whois.properties` from the repo to whois root directory and rename to `properties`
+* Copy the files `tools/hazelcast.xml`, `whois-commons/src/test/resources/log4j2.xml` from the repo to the whois root directory
+* Copy `whois-commons/src/test/resources/whois.properties` from the repo to whois root directory and rename to `properties`
 * Copy downloaded `jmxterm` jar to the Whois root directory.
-* Adjust the configuration variables at the beginning of `whois.init` script as necessary (e.g. user, jmx port, memory usage, JVM path, etc...)
 * Adjust `properties` to match your setup (e.g. JDBC URLs, port numbers, etc...)
    * for the example below we use port.query=1043 and port.api=1080
-* Create the databases WHOIS_LOCAL, MAILUPDATES_LOCAL, dnscheck_local, ACL_LOCAL, INTERNALS_LOCAL.
+* Create the databases WHOIS_LOCAL, MAILUPDATES_LOCAL, ACL_LOCAL, INTERNALS_LOCAL.
 
    For example:
 
@@ -58,13 +61,15 @@ Ensure MariaDB and the needed databases are created and populated
       use INTERNALS_LOCAL;
       source ./whois-commons/src/main/resources/internals_data.sql
 
-* Start whois by executing `./whois.init start`
+* Start whois by executing the following command. Use -Ddump.total.size.limit to specify the dump size:
+
+      /usr/bin/java -Dwhois -Djsse.enableSNIExtension=false -Dcom.sun.management.jmxremote -Dhazelcast.jmx=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.port=1099 -Xms1024m -Xmx8g -Dwhois.config=properties -Duser.timezone=UTC -Dhazelcast.config=hazelcast.xml -Dlog4j.configurationFile=file:log4j2.xml -jar whois.jar
+
    * If the test query for `193.0.0.1` does not result in an inetnum returned, the init script will return a failure. If your database is empty for example, this is normal. You might want to adjust the test whois query to match your needs.
    * Ignore exceptions in the log starting with [DatabaseVersionCheck] Error checking datasource...  
-* Check `var/console.log` for errors or warnings
-* Every 4 hours you'll get the latest lines in `var/console.log` sent to the `OPEREMAIL` defined in the init script
-* Use `./whois.init stop` to stop the server
-* Use `./whois.init jmx` to access the administrative interface exported via JMX
+* The logs will be printed in the console, notifying about the progress
+* Kill the process to stop the server
+* Use `java --add-exports jdk.jconsole/sun.tools.jconsole=ALL-UNNAMED -jar jmxterm-1.0.4-uber.jar -v verbose` to access the administrative interface exported via JMX
 
 ## Load local whois with initial test content
 * for testing purposes, use `source=TEST` in the `properties` file
@@ -73,7 +78,7 @@ Ensure MariaDB and the needed databases are created and populated
   * The file TEST.db contains an initial set of RPSL objects used for testing purposes.
 * while the server is running, use JMX to load the database with the content of TEST.db:
 
-      ./whois.init jmx
+      java --add-exports jdk.jconsole/sun.tools.jconsole=ALL-UNNAMED -jar jmxterm-1.0.4-uber.jar -v verbose
       bean net.ripe.db.whois:name=Bootstrap
       run loadDump comment TEST.db
 
@@ -94,12 +99,12 @@ if you want to add content, you can use the `TEST-DBM-MNT` mntner whose password
       curl http://localhost:1080/whois/test/mntner/TEST-DBM-MNT?password=emptypassword
 
 
-you can check the instructions in [WHOIS-REST-API](../06.Update-Methods/01-RESTful-API.md#ripe-database-restful-api) for more info about the REST API
+you can check the instructions in [WHOIS-REST-API](../Update-Methods/RESTful-API/#ripe-database-restful-api) for more info about the REST API
 
 
 ## How to allow unlimited queries
 
-The Whois server can block a client's IP as explained [here](../13.Types-of-Queries/12-Access-Control-for-Queries.md#access-control-for-queries).
+The Whois server can block a client's IP as explained [here](../Types-of-Queries/Access-Control-for-Queries/#access-control-for-queries).
 
 You can allow unlimited queries from a certain IP by running a few queries as follows.
 
